# pyigor

./: .gitignore  LICENSE.txt  MANIFEST.in  README.md  pyigor.ipf  setup.cfg
src/pyigor/: __init__.py  __main__.py  pyigor.py
src/pyigor/config/: config.json
