[metadata]
name = pyigor
version = 0.1.1
author = chocolate-icecream
description = Bridging Python and WaveMetrics Igor Pro
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/chocolate-icecream/pyigor
project_urls =
    Bug Tracker = https://github.com/chocolate-icecream/pyigor/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Intended Audience :: Education
keywords =
    Igor WaveMetrics

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires = 
    flask >= 2.1
    h5py >= 3.0

[options.packages.find]
where = src
