[metadata]
name = pyigor
version = 0.2.1
author = chocolate-icecream
description = Seamlessly integrate Python with WaveMetrics Igor Pro for data and command exchange.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/chocolate-icecream/pyigor
project_urls =
    Bug Tracker = https://github.com/chocolate-icecream/pyigor/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Intended Audience :: Education
keywords =
    Igor

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires = 
    flask >= 2.1
    h5py >= 3.0
    numpy >= 1.0

[options.packages.find]
where = src
